--- a/w3schools/jsexamples.html
+++ b/w3schools/jsexamples.html
@@ -1,12 +1,23 @@
 <!DOCTYPE html>
 <html>
+
 <body>
 
-<h2>What Can JavaScript Do?</h2>
+    <h2>What Can JavaScript Do?</h2>
+    <div>
+        <p id="demo">1. JavaScript can change HTML content.</p>
 
-<p id="demo">JavaScript can change HTML content.</p>
-
-<button type="button" onclick='document.getElementById("demo").innerHTML = "Hello JavaScript!"'>Click Me!</button>
-
+        <button type="button" onclick='document.getElementById("demo").innerHTML = "Hello Rahul!"'>Click Me!</button>
+    </div>
+    <br />
+    <div>
+        <p>2. Change your Image Color</p>
+        <button type="button" onclick="document.getElementById('changeColor').src='../Resources/images/black.png'"> Make
+            be Black </button>
+        <img id="changeColor" src='../Resources/images/red.png' style="width:100px; height:100px;" />
+        <button type="button" onclick="document.getElementById('changeColor').src='../Resources/images/red.png'">Make me
+            Red</button>
+    </div>
 </body>
+
 </html>
