--- a/w3schools/jsexamples.html
+++ b/w3schools/jsexamples.html
@@ -2,14 +2,12 @@
 <html>
 
 <body>
-
     <h2>What Can JavaScript Do?</h2>
     <div>
         <p id="demo">1. JavaScript can change HTML content.</p>
-
         <button type="button" onclick='document.getElementById("demo").innerHTML = "Hello Rahul!"'>Click Me!</button>
+        <p>*************************************************************</p>
     </div>
-    <br />
     <div>
         <p>2. Change your Image Color</p>
         <button type="button" onclick="document.getElementById('changeColor').src='../Resources/images/black.png'"> Make
@@ -17,6 +15,12 @@
         <img id="changeColor" src='../Resources/images/red.png' style="width:100px; height:100px;" />
         <button type="button" onclick="document.getElementById('changeColor').src='../Resources/images/red.png'">Make me
             Red</button>
+        <p>*************************************************************</p>
+    </div>
+    <div>
+        <p id="cssChange">Change Style</p>
+        <button type="button" onclick='document.getElementById("cssChange").style.fontSize="40px"'>Change Style</button>
+        <p>*************************************************************</p>
     </div>
 </body>
 
