--- a/w3schools/jsexamples.html
+++ b/w3schools/jsexamples.html
@@ -18,8 +18,15 @@
         <p>*************************************************************</p>
     </div>
     <div>
-        <p id="cssChange">Change Style</p>
+        <p id="cssChange">3. Change Style</p>
         <button type="button" onclick='document.getElementById("cssChange").style.fontSize="40px"'>Change Style</button>
+        <p>*************************************************************</p>
+    </div>
+    <div>
+        <p>4. Hide Element</p>
+        <p id="hide">Hide Me By your click</p>
+
+        <button type="button" onclick='document.getElementById("hide").style.display="none"'>Hide Element</button>
         <p>*************************************************************</p>
     </div>
 </body>
