--- a/w3schools/jsexamples.html
+++ b/w3schools/jsexamples.html
@@ -6,6 +6,19 @@
         function changeParaHeadFunction() {
             document.getElementById('changeParaHead').innerHTML = "Paragraph Changed from header script.";
         }
+        var x,y,z,a;
+        x=5;
+        y=6;
+        z=x+y;        
+        //variables test
+        var p = "5"+2+3;
+        carName ='volvo';
+        alert('Car Name is '+carName);
+        carName;
+        alert('Car Name is '+carName);
+        var carName;
+        alert('Car Name is '+carName);
+        alert('The value of z is '+z+', a is '+a+' and p is '+p);
     </script>
 </head>
 
